# magicblock-sync

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: channels.rs  connect.rs  consts.rs  lib.rs  syncer.rs  transaction_syncer.rs  types.rs
