[package]
name = "dlp-sync"
version = "0.1.0"
edition = "2021"
description = "Real-time synchronization of delegation records via Laserstream"
readme = "README.md"

[dependencies]
futures = "0.3"
helius-laserstream = "0.1.5"
tokio = { version = "1.0", features = ["sync", "macros"] }
tracing = "0.1"
